--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
-﻿body {
-  margin: 10px auto;
+body {
+  margin: 0% auto;
   padding: 0;
 }
 .container {
   position: absolute;
-/*  top: 50%; */
+  top: 0%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 98%;
-/*  height: 200px; */
+  width: 94%;
+  /* height: 200px; */
+  margin: 5% auto;
 }
 .imageBox {
-  width: 90%;
+  width: 100%;
   position: absolute;
   top: 0;
   left: 0;
@@ -31,5 +32,5 @@
 }
 
 img	{
-  width: 100vw;
+  width: 94vw;
 }
